Fixed box to not squish on phone screens

--- a/styles.css
+++ b/styles.css
@@ -12,23 +12,23 @@ h1 {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    width: 35vw;
-    height:35vw;
+    width: 40vw;
+    height:40vw;
     margin: auto;
     box-shadow: 1vw 1vw 1vw black;
     border-radius: 1vw;
 }
 .square {
     background: whitesmoke;
-    width: 10vw;
-    height: 10vw;
+    width: 9vw;
+    height: 9vw;
     display: flex;
     justify-content: center;
     flex-direction: column;
     text-align: center;
     cursor: pointer;
     border-style: inset;
-    border-width: .5vh;
+    border-width: 1vw;
     border-color: rgb(106, 106, 106);
     border-radius: 1vw;
 }
